Add class to nav, header and websolutions

--- a/index.html
+++ b/index.html
@@ -30,45 +30,47 @@
     <header class="home-nav">
         <div class="home-nav-logo"><img src="/" alt="logo"></div>
         <nav>
-            <ul>
-                <li><a href="/">Metrolics logo</a></li>
-                <li><a href="/">Home</a></li>
-                <li><a href="/">Portfolio</a></li>
-                <li><a href="/">Blog</a></li>
-                <li><a href="/">Quo Vadis?</a></li>
-                <li><a href="/">Let's Chat</a></li> 
+          <a href="/" class="nav-logo">
+            <img src="/" alt="metrolics logo">Metrolics logo
+          </a>
+            <ul class="nav-tabs">
+                <li><a href="/" class="nav-home">Home</a></li>
+                <li><a href="/" class="nav-portfolio">Portfolio</a></li>
+                <li><a href="/" class="nav-blog">Blog</a></li>
+                <li><a href="/" class="nav-quo">Quo Vadis?</a></li>
+                <li><a href="/" class="nav-chat">Let's Chat</a></li> 
              </ul>
         </nav>
     </header>
-    <div class="row">
+    <div class="banner-row">
     <div class="banner"> <img src="/" alt="banner">This is the banner</div>
     </div>
     <h1 class="page-home-intro">Hey folks! We are the Metrolics. It sports a responsive layout with a mobile layout.theme.</h1>
 
-    <section class="websolutions">
-        <h2>Things That We Do</h2>
-        <p>Ask us what we can do for you</p>
+    <div class="websolutions">
+        <h2 class="websolutions-title">Things That We Do</h2>
+        <p class="websolutions-caption">Ask us what we can do for you</p>
         <div class="websolutions_container">
-            <img src=""> 
-            <h3>Websolutions</h3>
-            <p>Description text</p>
+            <img src="/" class="websolutions-image"> 
+            <h3 class="websolutions-image-title">Websolutions</h3>
+            <p class="websolutions-image-paragraph">Description text</p>
         </div>
         <div class="websolutions_container">
-            <img src=""> 
-            <h3>Websolutions</h3>
-            <p>Description text</p>
+            <img src="/" class="websolutions-image"> 
+            <h3 class="websolutions-image-title">Websolutions</h3>
+            <p class="websolutions-image-paragraph">Description text</p>
         </div>
         <div class="websolutions_container">
-            <img src=""> 
-            <h3>Websolutions</h3>
-            <p>Description text</p>
+            <img src="/" class="websolutions-image"> 
+            <h3 class="websolutions-image-title">Websolutions</h3>
+            <p class="websolutions-image-paragraph">Description text</p>
         </div>
         <div class="websolutions_container">
-            <img src=""> 
-            <h4>Websolutions</h4>
-            <p>Description text</p>
+            <img src="/" class="websolutions-image"> 
+            <h3 class="websolutions-image-title">Websolutions</h3>
+            <p class="websolutions-image-paragraph">Description text</p>
         </div>
-    </section>
+    </div>
 
     <section class="blog">
         <h2 class="blog-title">What's Up Lately?</h2>
