Add class to blog, gallery, clients and footer

--- a/index.html
+++ b/index.html
@@ -72,115 +72,137 @@
         </div>
     </div>
 
-    <section class="blog">
+    <div class="blog">
         <h2 class="blog-title">What's Up Lately?</h2>
-        <p class="blog-tagline">Read up on our latest work</p>
-        <div class="blog_entry">
+        <p class="blog-caption">Read up on our latest work</p>
+        <div class="blog-entry">
             <article class="blog-item"> 
-                <img src="" class="blog-image">
+                <img src="/" class="blog-image" al="blog post image">
                 <div class="blog-date">
-                    <div class="date-day"></div>
-                    <div class="date-month"></div>
+                    <div class="blog-date-day"></div>
+                    <div class="blog-date-month"></div>
                 </div>
                 <div class="blog-caption"></div>
             </article>
             <article class="blog-item"> 
-                <img src="" class="blog-image">
-                <div class="blog-date">
-                    <div class="date-day"></div>
-                    <div class="date-month"></div>
-                </div>
-                <div class="blog-caption"></div>
-            </article>
-            <article class="blog-item"> 
-                <img src="" class="blog-image">
-                <div class="blog-date">
-                    <div class="date-day"></div>
-                    <div class="date-month"></div>
-                </div>
-                <div class="blog-caption"></div>
-            </article>
+              <img src="/" class="blog-image" al="blog post image">
+              <div class="blog-date">
+                  <div class="blog-date-day"></div>
+                  <div class="blog-date-month"></div>
+              </div>
+              <div class="blog-caption"></div>
+          </article>
+          <article class="blog-item"> 
+            <img src="/" class="blog-image" al="blog post image">
+            <div class="blog-date">
+                <div class="blog-date-day"></div>
+                <div class="blog-date-month"></div>
+            </div>
+            <div class="blog-caption"></div>
+        </article>
         </div>
-    </section>
+    </div>
 
-    <section class="gallery">
+    <div class="gallery">
         <h2 class="gallery-title">Our Best Work. Period</h2>
-        <p class="gallery-tagline">Client happy? We are happy.</p>
-        <div class="gallery-div">
-            <img src="" class="gallery-image"> <!--Add <a> tag -->
-            <img src="" class="gallery-image">
-            <img src="" class="gallery-image">
-            <img src="" class="gallery-image">
-            <img src="" class="gallery-image">
-            <img src="" class="gallery-image">
+        <p class="gallery-caption">Client happy? We are happy.</p>
+        <div class="gallery-grid">
+          <a href="/" alt="gallery image"> 
+            <img src="/" class="gallery-image" alt="gallery image"> <!--add hover in css-->
+          </a> 
+          <a href="/" alt="gallery image"> 
+            <img src="/" class="gallery-image" alt="gallery image"> 
+          </a> 
+          <a href="/" alt="gallery image"> 
+            <img src="/" class="gallery-image" alt="gallery image"> 
+          </a> 
+          <a href="/" alt="gallery image"> 
+            <img src="/" class="gallery-image" alt="gallery image"> 
+          </a> 
+          <a href="/" alt="gallery image"> 
+            <img src="/" class="gallery-image" alt="gallery image"> 
+          </a> 
+          <a href="/" alt="gallery image"> 
+            <img src="/" class="gallery-image" alt="gallery image"> 
+          </a> 
+    </div>
+
+    <div class="clients">
+        <h2 class="clients-title">Satisfaction Guranteed</h2>
+        <p class="clients-caption">Past clients stoked with our work. We are not happy until YOU are happy</p>
+        <div class="clients-logos">
+            <img src="/" class="client-logo-image" alt="client logo image">
+            <img src="/" class="client-logo-image" alt="client logo image">
+            <img src="/" class="client-logo-image" alt="client logo image">
+            <img src="/" class="client-logo-image" alt="client logo image">
+            <img src="/" class="client-logo-image" alt="client logo image">
         </div>
-    </section>
-    <section class="satisfaction">
-        <h2>Satisfaction Guranteed</h2>
-        <p>Past clients stoked with our work. We are not happy until YOU are happy</p>
-        <div class="logos">
-            <img src="">
-            <img src="">
-            <img src="">
-            <img src="">
-            <img src="">
-        </div>
-    </section>
+    </div>
     
 </body>
+
 <footer>
-    <section class="profile">
-        <img src="" class="profilepic">
-        <p>Alf has over 10 years experience in the industry...</p>
-    </section>
-    <section class="info">
+    <div class="profile">
+        <img src="/" class="profile-image" alt="profile image">
+        <p class="profile-paragraph">Alf has over 10 years experience in the industry...</p> <!--Add the rest of the paragraph text-->
+    </div>
+    
+    <div class="info">
+
         <div class="aboutus">
-            <h3>About Us</h3>
-            <p>Minions ipsum potatoooo potatooo</p>
-            <p>Minions ipsum potatoooo potatooo</p>
+            <h3 class="aboutus-title">About Us</h3>
+            <p class="aboutus-paragraph">Minions ipsum potatoooo potatooo</p> <!--add rest of paragraph text-->
+            <p class="aboutus-paragraph">Minions ipsum potatoooo potatooo</p> <!--add rest of paragraph text-->
         </div>
+
         <div class="instagram">
-            <h3>Instagram</h3>
-            <img src="">
-            <img src="">
-            <img src="">
-            <img src="">
-            <img src="">
-            <img src="">
-            <img src="">
-            <img src="">
+            <h3 class="instagram-title">Instagram</h3>
+            <div class="instagram-post">
+              <img src="/" alt="instagram post">
+              <img src="/" alt="instagram post">
+              <img src="/" alt="instagram post">
+              <img src="/" alt="instagram post">
+              <img src="/" alt="instagram post">
+              <img src="/" alt="instagram post">
+              <img src="/" alt="instagram post">
+              <img src="/" alt="instagram post">
+              <img src="/" alt="instagram post">
+            </div>
         </div>
-        <div class="whatsnew">
-            <h4>What's New on Mastoden</h4>
-            <p>Minions ipsum potatoooo potatooo</p>
-            <p>Minions ipsum potatoooo potatooo</p>
-            <p>Minions ipsum potatoooo potatooo</p>
+
+        <div class="news">
+            <h3 class="news-title">What's New on Mastoden</h3>
+            <p class="news-paragraph">Minions ipsum potatoooo potatooo</p> <!--Should this be separate divs?-->
+            <p class="news-paragraph">Minions ipsum potatoooo potatooo</p>
+            <p class="news-paragraph">Minions ipsum potatoooo potatooo</p>
         </div>
-        <div class="track">
-            <h3>Track us!</h3>
-            <div class="track_container">
-                <img src="">
+
+        <div class="trackus">
+            <h3 class="trackus-title">Track us!</h3>
+            <div class="trackus-grid">
+              <a href="/" class="trackus-link">
+                <img src="/" class="trackus-image">
+              </a>
+              <a href="/" class="trackus-link">
+                <img src="/" class="trackus-image">
+              </a>
+              <a href="/" class="trackus-link">
+                <img src="/" class="trackus-image">
+              </a>
+              <a href="/" class="trackus-link">
+                <img src="/" class="trackus-image">
+              </a>
+              <a href="/" class="trackus-link">
+                <img src="/" class="trackus-image">
+              </a>
             </div>
-            <div class="track_container">
-                <img src="">
+            <div class="email"> 
+              <label for="email">Enter your email:</label>
+              <input type="email" id="email" name="email">
+              <input type="submit">
             </div>
-            <div class="track_container">
-                <img src="">
-            </div>
-            <div class="track_container">
-                <img src="">
-            </div>
-            <div class="track_container">
-                <img src="">
-            </div>
-            <label for="email">Enter your email:</label>
-            <input type="email" id="email" name="email">
-            <input type="submit">
         </div>
-    </section>
+    </div>
 </footer>
-</html>
-
-
 
 </html>
