Add gray image to blog posts and gallery

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         <p class="blog-caption">Read up on our latest work</p>
         <div class="blog-entry">
             <article class="blog-item"> 
-                <img src="/" class="blog-image" al="blog post image">
+                <img src="img/grey image.jpg" class="blog-image" al="blog post image">
                 <div class="blog-date">
                     <div class="blog-date-day"></div>
                     <div class="blog-date-month"></div>
@@ -85,7 +85,7 @@
                 <div class="blog-caption"></div>
             </article>
             <article class="blog-item"> 
-              <img src="/" class="blog-image" al="blog post image">
+              <img src="img/grey image.jpg" class="blog-image" al="blog post image">
               <div class="blog-date">
                   <div class="blog-date-day"></div>
                   <div class="blog-date-month"></div>
@@ -93,7 +93,7 @@
               <div class="blog-caption"></div>
           </article>
           <article class="blog-item"> 
-            <img src="/" class="blog-image" al="blog post image">
+            <img src="img/grey image.jpg" class="blog-image" al="blog post image">
             <div class="blog-date">
                 <div class="blog-date-day"></div>
                 <div class="blog-date-month"></div>
@@ -108,22 +108,22 @@
         <p class="gallery-caption">Client happy? We are happy.</p>
         <div class="gallery-grid">
           <a href="/" alt="gallery image"> 
-            <img src="/" class="gallery-image" alt="gallery image"> <!--add hover in css-->
+            <img src="img/grey image.jpg" class="gallery-image" alt="gallery image"> <!--add hover in css-->
           </a> 
           <a href="/" alt="gallery image"> 
-            <img src="/" class="gallery-image" alt="gallery image"> 
+            <img src="img/grey image.jpg" class="gallery-image" alt="gallery image"> 
           </a> 
           <a href="/" alt="gallery image"> 
-            <img src="/" class="gallery-image" alt="gallery image"> 
+            <img src="img/grey image.jpg" class="gallery-image" alt="gallery image"> 
           </a> 
           <a href="/" alt="gallery image"> 
-            <img src="/" class="gallery-image" alt="gallery image"> 
+            <img src="img/grey image.jpg" class="gallery-image" alt="gallery image"> 
           </a> 
           <a href="/" alt="gallery image"> 
-            <img src="/" class="gallery-image" alt="gallery image"> 
+            <img src="img/grey image.jpg" class="gallery-image" alt="gallery image"> 
           </a> 
           <a href="/" alt="gallery image"> 
-            <img src="/" class="gallery-image" alt="gallery image"> 
+            <img src="img/grey image.jpg" class="gallery-image" alt="gallery image"> 
           </a> 
     </div>
 
