Add css grid to blog, gallery and clients

--- a/index.html
+++ b/index.html
@@ -136,11 +136,11 @@
         <h2 class="clients-title">Satisfaction Guranteed</h2>
         <p class="clients-caption">Past clients stoked with our work. We are not happy until YOU are happy</p>
         <div class="clients-logos">
-            <img src="/" class="client-logo-image" alt="client logo image">
-            <img src="/" class="client-logo-image" alt="client logo image">
-            <img src="/" class="client-logo-image" alt="client logo image">
-            <img src="/" class="client-logo-image" alt="client logo image">
-            <img src="/" class="client-logo-image" alt="client logo image">
+            <img src="img/small grey image.jpg" class="client-logo-image" alt="client logo image">
+            <img src="img/small grey image.jpg" class="client-logo-image" alt="client logo image">
+            <img src="img/small grey image.jpg" class="client-logo-image" alt="client logo image">
+            <img src="img/small grey image.jpg" class="client-logo-image" alt="client logo image">
+            <img src="img/small grey image.jpg" class="client-logo-image" alt="client logo image">
         </div>
     </div>
     
