Fix css grid for blog section

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
     <div class="blog">
         <h2 class="blog-title">What's Up Lately?</h2>
-        <p class="blog-caption">Read up on our latest work</p>
+        <p class="blog-caption">Read up on our latest works</p>
         <div class="blog-entry">
             <article class="blog-item"> 
                 <img src="img/grey-image.jpg" class="blog-image" al="blog post image">
