--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         <p class="blog-caption">Read up on our latest works</p>
         <div class="blog-entry">
             <article class="blog-item"> 
-                <img src="img/grey-image.jpg" class="blog-image" al="blog post image">
+                <img src="img/grey-image.jpg" class="blog-image" alt="blog post image">
                 <div class="blog-date">
                     <div class="blog-date-day"></div>
                     <div class="blog-date-month"></div>
@@ -90,7 +90,7 @@
                 <div class="blog-caption"></div>
             </article>
             <article class="blog-item"> 
-              <img src="img/grey-image.jpg" class="blog-image" al="blog post image">
+              <img src="img/grey-image.jpg" class="blog-image" alt="blog post image">
               <div class="blog-date">
                   <div class="blog-date-day"></div>
                   <div class="blog-date-month"></div>
@@ -98,7 +98,7 @@
               <div class="blog-caption"></div>
           </article>
           <article class="blog-item"> 
-            <img src="img/grey-image.jpg" class="blog-image" al="blog post image">
+            <img src="img/grey-image.jpg" class="blog-image" alt="blog post image">
             <div class="blog-date">
                 <div class="blog-date-day"></div>
                 <div class="blog-date-month"></div>
