--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         <p class="blog-caption">Read up on our latest works</p>
         <div class="blog-entry">
             <article class="blog-item"> 
-                <img src="img/grey-image.jpg" class="blog-image" alt="blog post image">
+                <img src="img/sample-image.png" class="blog-image" alt="blog post image">
                 <div class="blog-date">
                     <div class="blog-date-day"></div>
                     <div class="blog-date-month"></div>
@@ -90,7 +90,7 @@
                 <div class="blog-caption"></div>
             </article>
             <article class="blog-item"> 
-              <img src="img/grey-image.jpg" class="blog-image" alt="blog post image">
+              <img src="img/sample-image.png" class="blog-image" alt="blog post image">
               <div class="blog-date">
                   <div class="blog-date-day"></div>
                   <div class="blog-date-month"></div>
@@ -98,7 +98,7 @@
               <div class="blog-caption"></div>
           </article>
           <article class="blog-item"> 
-            <img src="img/grey-image.jpg" class="blog-image" alt="blog post image">
+            <img src="img/sample-image.png" class="blog-image" alt="blog post image">
             <div class="blog-date">
                 <div class="blog-date-day"></div>
                 <div class="blog-date-month"></div>
@@ -113,22 +113,22 @@
         <p class="gallery-caption">Client happy? We are happy.</p>
         <div class="gallery-grid">
           <a href="/" alt="gallery image"> 
-            <img src="img/grey-image.jpg" class="gallery-image" alt="gallery image"> <!--add hover in css-->
+            <img src="img/sample-image.png" class="gallery-image" alt="gallery image"> <!--add hover in css-->
           </a> 
           <a href="/" alt="gallery image"> 
-            <img src="img/grey-image.jpg" class="gallery-image" alt="gallery image"> 
+            <img src="img/sample-image.png" class="gallery-image" alt="gallery image"> 
           </a> 
           <a href="/" alt="gallery image"> 
-            <img src="img/grey-image.jpg" class="gallery-image" alt="gallery image"> 
+            <img src="img/sample-image.png" class="gallery-image" alt="gallery image"> 
           </a> 
           <a href="/" alt="gallery image"> 
-            <img src="img/grey-image.jpg" class="gallery-image" alt="gallery image"> 
+            <img src="img/sample-image.png" class="gallery-image" alt="gallery image"> 
           </a> 
           <a href="/" alt="gallery image"> 
-            <img src="img/grey-image.jpg" class="gallery-image" alt="gallery image"> 
+            <img src="img/sample-image.png" class="gallery-image" alt="gallery image"> 
           </a> 
           <a href="/" alt="gallery image"> 
-            <img src="img/grey-image.jpg" class="gallery-image" alt="gallery image"> 
+            <img src="img/sample-image.png" class="gallery-image" alt="gallery image"> 
           </a> 
     </div>
 
@@ -136,11 +136,11 @@
         <h2 class="clients-title">Satisfaction Guranteed</h2>
         <p class="clients-caption">Past clients stoked with our work. We are not happy until YOU are happy</p>
         <div class="clients-logos">
-            <img src="img/small-grey-image.jpg" class="client-logo-image" alt="client logo image">
-            <img src="img/small-grey-image.jpg" class="client-logo-image" alt="client logo image">
-            <img src="img/small-grey-image.jpg" class="client-logo-image" alt="client logo image">
-            <img src="img/small-grey-image.jpg" class="client-logo-image" alt="client logo image">
-            <img src="img/small-grey-image.jpg" class="client-logo-image" alt="client logo image">
+            <img src="img/logo1.png" class="client-logo-image" alt="client logo image">
+            <img src="img/logo4.png" class="client-logo-image" alt="client logo image">
+            <img src="img/logo3.png" class="client-logo-image" alt="client logo image">
+            <img src="img/logo2.png" class="client-logo-image" alt="client logo image">
+            <img src="img/logo5.png" class="client-logo-image" alt="client logo image">
         </div>
     </div>
     
