--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <link rel="icon" href="/favicon.ico" sizes="any" />
     <link rel="icon" href="/icon.svg" type="image/svg+xml" />
     <link rel="apple-touch-icon" href="icon.png" />
-
+=======
   <link rel="manifest" href="site.webmanifest">
   <meta name="theme-color" content="#fafafa">
 
@@ -160,6 +160,18 @@
 
     <!-- aaaaaa -->
     <div class="blog">
+
+      <h2 class="blog-title">What's Up Lately?</h2>
+      <p class="blog-caption">Read up on our latest work</p>
+      <div class="blog-entry">
+        <article class="blog-item">
+          <img src="/" class="blog-image" al="blog post image" />
+          <div class="blog-date">
+            <div class="blog-date-day"></div>
+            <div class="blog-date-month"></div>
+          </div>
+          <div class="blog-caption"></div>
+=======
         <h2 class="blog-title">What's Up Lately?</h2>
         <p class="blog-caption">Read up on our latest works</p>
         <div class="blog-entry">
@@ -186,9 +198,66 @@
                 <div class="blog-date-month"></div>
             </div>
             <div class="blog-caption"></div>
+
+        </article>
+        <article class="blog-item">
+          <img src="/" class="blog-image" al="blog post image" />
+          <div class="blog-date">
+            <div class="blog-date-day"></div>
+            <div class="blog-date-month"></div>
+          </div>
+          <div class="blog-caption"></div>
+        </article>
+        <article class="blog-item">
+          <img src="/" class="blog-image" al="blog post image" />
+          <div class="blog-date">
+            <div class="blog-date-day"></div>
+            <div class="blog-date-month"></div>
+          </div>
+          <div class="blog-caption"></div>
+        </article>
+      </div>
     </div>
 
     <div class="gallery">
+
+      <h2 class="gallery-title">Our Best Work. Period</h2>
+      <p class="gallery-caption">Client happy? We are happy.</p>
+      <div class="gallery-grid">
+        <a href="/" alt="gallery image">
+          <img src="/" class="gallery-image" alt="gallery image" />
+          <!--add hover in css-->
+        </a>
+        <a href="/" alt="gallery image">
+          <img src="/" class="gallery-image" alt="gallery image" />
+        </a>
+        <a href="/" alt="gallery image">
+          <img src="/" class="gallery-image" alt="gallery image" />
+        </a>
+        <a href="/" alt="gallery image">
+          <img src="/" class="gallery-image" alt="gallery image" />
+        </a>
+        <a href="/" alt="gallery image">
+          <img src="/" class="gallery-image" alt="gallery image" />
+        </a>
+        <a href="/" alt="gallery image">
+          <img src="/" class="gallery-image" alt="gallery image" />
+        </a>
+      </div>
+    </div>
+
+    <div class="clients">
+      <h2 class="clients-title">Satisfaction Guranteed</h2>
+      <p class="clients-caption">
+        Past clients stoked with our work. We are not happy until YOU are happy
+      </p>
+      <div class="clients-logos">
+        <img src="/" class="client-logo-image" alt="client logo image" />
+        <img src="/" class="client-logo-image" alt="client logo image" />
+        <img src="/" class="client-logo-image" alt="client logo image" />
+        <img src="/" class="client-logo-image" alt="client logo image" />
+        <img src="/" class="client-logo-image" alt="client logo image" />
+      </div>
 
         <h2 class="gallery-title">Our Best Work. Period</h2>
         <p class="gallery-caption">Client happy? We are happy.</p>
@@ -226,73 +295,12 @@
 
     </div>
 
-    <footer>
-      <div class="profile">
-        <img src="/" class="profile-image" alt="profile image" />
-        <p class="profile-paragraph">
-          Alf has over 10 years experience in the industry...
-        </p>
-        <!--Add the rest of the paragraph text-->
+    <footer class="site-footer">
+      <div class="footer-container">
+        <section class="profile"></section>
+        <section class="about-us"></section>
+        <section class="instagram"></section>
+        <section class="mastodon"></section>
+        <section class="track-us"></section>
       </div>
-
-      <div class="info">
-        <div class="aboutus">
-          <h3 class="aboutus-title">About Us</h3>
-          <p class="aboutus-paragraph">Minions ipsum potatoooo potatooo</p>
-          <!--add rest of paragraph text-->
-          <p class="aboutus-paragraph">Minions ipsum potatoooo potatooo</p>
-          <!--add rest of paragraph text-->
-        </div>
-
-        <div class="instagram">
-          <h3 class="instagram-title">Instagram</h3>
-          <div class="instagram-post">
-            <img src="/" alt="instagram post" />
-            <img src="/" alt="instagram post" />
-            <img src="/" alt="instagram post" />
-            <img src="/" alt="instagram post" />
-            <img src="/" alt="instagram post" />
-            <img src="/" alt="instagram post" />
-            <img src="/" alt="instagram post" />
-            <img src="/" alt="instagram post" />
-            <img src="/" alt="instagram post" />
-          </div>
-        </div>
-
-        <div class="news">
-          <h3 class="news-title">What's New on Mastoden</h3>
-          <p class="news-paragraph">Minions ipsum potatoooo potatooo</p>
-          <!--Should this be separate divs?-->
-          <p class="news-paragraph">Minions ipsum potatoooo potatooo</p>
-          <p class="news-paragraph">Minions ipsum potatoooo potatooo</p>
-        </div>
-
-        <div class="trackus">
-          <h3 class="trackus-title">Track us!</h3>
-          <div class="trackus-grid">
-            <a href="/" class="trackus-link">
-              <img src="/" class="trackus-image" />
-            </a>
-            <a href="/" class="trackus-link">
-              <img src="/" class="trackus-image" />
-            </a>
-            <a href="/" class="trackus-link">
-              <img src="/" class="trackus-image" />
-            </a>
-            <a href="/" class="trackus-link">
-              <img src="/" class="trackus-image" />
-            </a>
-            <a href="/" class="trackus-link">
-              <img src="/" class="trackus-image" />
-            </a>
-          </div>
-          <div class="email">
-            <label for="email">Enter your email:</label>
-            <input type="email" id="email" name="email" />
-            <input type="submit" />
-          </div>
-        </div>
-      </div>
-    </footer>
-  </body>
-</html>
+    </footer>  
