Add footer.css with basic layout styles and link it to index.html

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Metrolics</title>
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/header.css" />
+    <link rel="stylesheet" href="css/footer.css">
     <meta name="description" content="" />
 
     <meta property="og:title" content="" />
