Add placeholder image

--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
         <p class="blog-caption">Read up on our latest works</p>
         <div class="blog-entry">
             <article class="blog-item"> 
-                <img src="img/sample-image.png" class="blog-image" alt="blog post image">
+                <img src="img/placeholder.svg" class="blog-image" alt="blog post image">
                 <div class="blog-date">
                     <div class="blog-date-day"></div>
                     <div class="blog-date-month"></div>
@@ -172,7 +172,7 @@
                 <div class="blog-caption"></div>
             </article>
             <article class="blog-item"> 
-              <img src="img/sample-image.png" class="blog-image" alt="blog post image">
+              <img src="img/placeholder.svg" class="blog-image" alt="blog post image">
               <div class="blog-date">
                   <div class="blog-date-day"></div>
                   <div class="blog-date-month"></div>
@@ -180,7 +180,7 @@
               <div class="blog-caption"></div>
           </article>
           <article class="blog-item"> 
-            <img src="img/sample-image.png" class="blog-image" alt="blog post image">
+            <img src="img/placeholder.svg" class="blog-image" alt="blog post image">
             <div class="blog-date">
                 <div class="blog-date-day"></div>
                 <div class="blog-date-month"></div>
@@ -189,27 +189,26 @@
     </div>
 
     <div class="gallery">
-
         <h2 class="gallery-title">Our Best Work. Period</h2>
         <p class="gallery-caption">Client happy? We are happy.</p>
         <div class="gallery-grid">
           <a href="/" alt="gallery image"> 
-            <img src="img/sample-image.png" class="gallery-image" alt="gallery image"> <!--add hover in css-->
+            <img src="img/placeholder.svg" class="gallery-image" alt="gallery image"> <!--add hover in css-->
           </a> 
           <a href="/" alt="gallery image"> 
-            <img src="img/sample-image.png" class="gallery-image" alt="gallery image"> 
+            <img src="img/placeholder.svg" class="gallery-image" alt="gallery image"> 
           </a> 
           <a href="/" alt="gallery image"> 
-            <img src="img/sample-image.png" class="gallery-image" alt="gallery image"> 
+            <img src="img/placeholder.svg" class="gallery-image" alt="gallery image"> 
           </a> 
           <a href="/" alt="gallery image"> 
-            <img src="img/sample-image.png" class="gallery-image" alt="gallery image"> 
+            <img src="img/placeholder.svg" class="gallery-image" alt="gallery image"> 
           </a> 
           <a href="/" alt="gallery image"> 
-            <img src="img/sample-image.png" class="gallery-image" alt="gallery image"> 
+            <img src="img/placeholder.svg" class="gallery-image" alt="gallery image"> 
           </a> 
           <a href="/" alt="gallery image"> 
-            <img src="img/sample-image.png" class="gallery-image" alt="gallery image"> 
+            <img src="img/placeholder.svg" class="gallery-image" alt="gallery image"> 
           </a> 
     </div>
 
@@ -223,7 +222,6 @@
             <img src="img/logo2.png" class="client-logo-image" alt="client logo image">
             <img src="img/logo5.png" class="client-logo-image" alt="client logo image">
         </div>
-
     </div>
 
     <footer>
