Added div for blog item overlay

--- a/index.html
+++ b/index.html
@@ -166,26 +166,38 @@
             <article class="blog-item"> 
                 <img src="img/placeholder.svg" class="blog-image" alt="blog post image">
                 <div class="blog-date">
-                    <div class="blog-date-day"></div>
-                    <div class="blog-date-month"></div>
+                    <div class="blog-date-day">29</div>
+                    <div class="blog-date-month-year">Jan 2025</div>
                 </div>
-                <div class="blog-caption"></div>
+                <div class="blog-item-caption-container">
+                  <div class="blog-item-caption-header">Sample Image Post</div>
+                  <div class="blog-item-caption-subheader">Photography</div>
+                  <div class="blog-item-caption-square"></div>
+                </div>
             </article>
             <article class="blog-item"> 
               <img src="img/placeholder.svg" class="blog-image" alt="blog post image">
               <div class="blog-date">
-                  <div class="blog-date-day"></div>
-                  <div class="blog-date-month"></div>
+                  <div class="blog-date-day">29</div>
+                  <div class="blog-date-month-year">Jan 2025</div>
               </div>
-              <div class="blog-caption"></div>
+              <div class="blog-item-caption-container">
+                <div class="blog-item-caption-header">Sample Image Post</div>
+                <div class="blog-item-caption-subheader">Photography</div>
+                <div class="blog-item-caption-square"></div>
+              </div>  
           </article>
           <article class="blog-item"> 
             <img src="img/placeholder.svg" class="blog-image" alt="blog post image">
             <div class="blog-date">
-                <div class="blog-date-day"></div>
-                <div class="blog-date-month"></div>
+                <div class="blog-date-day">29</div>
+                <div class="blog-date-month-year">Jan 2025</div>
             </div>
-            <div class="blog-caption"></div>
+            <div class="blog-item-caption-container">
+              <div class="blog-item-caption-header">Sample Image Post</div>
+              <div class="blog-item-caption-subheader">Photography</div>
+              <div class="blog-item-caption-square"></div>
+            </div>
     </div>
 
     <div class="gallery">
