Working on gallery hover

--- a/index.html
+++ b/index.html
@@ -204,24 +204,66 @@
         <h2 class="gallery-title">Our Best Work. Period</h2>
         <p class="gallery-caption">Client happy? We are happy.</p>
         <div class="gallery-grid">
-          <a href="/" alt="gallery image"> 
-            <img src="img/placeholder.svg" class="gallery-image" alt="gallery image"> <!--add hover in css-->
-          </a> 
-          <a href="/" alt="gallery image"> 
-            <img src="img/placeholder.svg" class="gallery-image" alt="gallery image"> 
-          </a> 
-          <a href="/" alt="gallery image"> 
-            <img src="img/placeholder.svg" class="gallery-image" alt="gallery image"> 
-          </a> 
-          <a href="/" alt="gallery image"> 
-            <img src="img/placeholder.svg" class="gallery-image" alt="gallery image"> 
-          </a> 
-          <a href="/" alt="gallery image"> 
-            <img src="img/placeholder.svg" class="gallery-image" alt="gallery image"> 
-          </a> 
-          <a href="/" alt="gallery image"> 
-            <img src="img/placeholder.svg" class="gallery-image" alt="gallery image"> 
-          </a> 
+          <div class="gallery-image-container">
+            <a href="/" alt="gallery image"> 
+             <img src="img/placeholder.svg" class="gallery-image" alt="gallery image"> 
+            </a> 
+            <span class="gallery-image-overlay">
+              <span class="gallery-image-overlay-header">Sample Image Post</span>
+              <span class="gallery-image-overlay-subheader">Photography</span>
+              <span class="gallery-image-overlay-square"></span>
+            </span>
+          </div>
+          <div class="gallery-image-container">
+            <a href="/" alt="gallery image"> 
+              <img src="img/placeholder.svg" class="gallery-image" alt="gallery image"> 
+            </a> 
+            <span class="gallery-image-overlay">
+              <span class="gallery-image-overlay-header">Sample Image Post</span>
+              <span class="gallery-image-overlay-subheader">Photography</span>
+              <span class="gallery-image-overlay-square"></span>
+            </span>
+          </div>
+          <div class="gallery-image-container">
+            <a href="/" alt="gallery image"> 
+              <img src="img/placeholder.svg" class="gallery-image" alt="gallery image"> 
+            </a> 
+            <span class="gallery-image-overlay">
+              <span class="gallery-image-overlay-header">Sample Image Post</span>
+              <span class="gallery-image-overlay-subheader">Photography</span>
+              <span class="gallery-image-overlay-square"></span>
+            </span>
+          </div>
+          <div class="gallery-image-container">
+            <a href="/" alt="gallery image"> 
+              <img src="img/placeholder.svg" class="gallery-image" alt="gallery image"> 
+            </a> 
+            <span class="gallery-image-overlay">
+              <span class="gallery-image-overlay-header">Sample Image Post</span>
+              <span class="gallery-image-overlay-subheader">Photography</span>
+              <span class="gallery-image-overlay-square"></span>
+            </span>
+          </div>
+          <div class="gallery-image-container">
+            <a href="/" alt="gallery image"> 
+              <img src="img/placeholder.svg" class="gallery-image" alt="gallery image"> 
+            </a> 
+            <span class="gallery-image-overlay">
+              <span class="gallery-image-overlay-header">Sample Image Post</span>
+              <span class="gallery-image-overlay-subheader">Photography</span>
+              <span class="gallery-image-overlay-square"></span>
+            </span>
+          </div>
+          <div class="gallery-image-container">
+            <a href="/" alt="gallery image"> 
+              <img src="img/placeholder.svg" class="gallery-image" alt="gallery image"> 
+            </a> 
+            <span class="gallery-image-overlay">
+              <span class="gallery-image-overlay-header">Sample Image Post</span>
+              <span class="gallery-image-overlay-subheader">Photography</span>
+              <span class="gallery-image-overlay-square"></span>
+            </span>
+          </div>
     </div>
 
     <div class="clients">
