Add overlay on gallery images

--- a/index.html
+++ b/index.html
@@ -208,61 +208,73 @@
             <a href="/" alt="gallery image"> 
              <img src="img/placeholder.svg" class="gallery-image" alt="gallery image"> 
             </a> 
-            <span class="gallery-image-overlay">
-              <span class="gallery-image-overlay-header">Sample Image Post</span>
-              <span class="gallery-image-overlay-subheader">Photography</span>
-              <span class="gallery-image-overlay-square"></span>
-            </span>
+            <div class="gallery-image-overlay">
+              <div class="overlay-caption-container">
+                <div class="overlay-caption-header">Sample Image Post</div>
+                <div class="overlay-caption-subheader">Photography</div>
+                <div class="overlay-caption-square"></div>
+              </div>
+            </div>
           </div>
           <div class="gallery-image-container">
             <a href="/" alt="gallery image"> 
               <img src="img/placeholder.svg" class="gallery-image" alt="gallery image"> 
             </a> 
-            <span class="gallery-image-overlay">
-              <span class="gallery-image-overlay-header">Sample Image Post</span>
-              <span class="gallery-image-overlay-subheader">Photography</span>
-              <span class="gallery-image-overlay-square"></span>
-            </span>
+            <div class="gallery-image-overlay">
+              <div class="overlay-caption-container">
+                <div class="overlay-caption-header">Sample Image Post</div>
+                <div class="overlay-caption-subheader">Photography</div>
+                <div class="overlay-caption-square"></div>
+              </div>
+            </div>
           </div>
           <div class="gallery-image-container">
             <a href="/" alt="gallery image"> 
               <img src="img/placeholder.svg" class="gallery-image" alt="gallery image"> 
             </a> 
-            <span class="gallery-image-overlay">
-              <span class="gallery-image-overlay-header">Sample Image Post</span>
-              <span class="gallery-image-overlay-subheader">Photography</span>
-              <span class="gallery-image-overlay-square"></span>
-            </span>
+            <div class="gallery-image-overlay">
+              <div class="overlay-caption-container">
+                <div class="overlay-caption-header">Sample Image Post</div>
+                <div class="overlay-caption-subheader">Photography</div>
+                <div class="overlay-caption-square"></div>
+              </div>
+            </div>
           </div>
           <div class="gallery-image-container">
             <a href="/" alt="gallery image"> 
               <img src="img/placeholder.svg" class="gallery-image" alt="gallery image"> 
             </a> 
-            <span class="gallery-image-overlay">
-              <span class="gallery-image-overlay-header">Sample Image Post</span>
-              <span class="gallery-image-overlay-subheader">Photography</span>
-              <span class="gallery-image-overlay-square"></span>
-            </span>
+            <div class="gallery-image-overlay">
+              <div class="overlay-caption-container">
+                <div class="overlay-caption-header">Sample Image Post</div>
+                <div class="overlay-caption-subheader">Photography</div>
+                <div class="overlay-caption-square"></div>
+              </div>
+            </div>
           </div>
           <div class="gallery-image-container">
             <a href="/" alt="gallery image"> 
               <img src="img/placeholder.svg" class="gallery-image" alt="gallery image"> 
             </a> 
-            <span class="gallery-image-overlay">
-              <span class="gallery-image-overlay-header">Sample Image Post</span>
-              <span class="gallery-image-overlay-subheader">Photography</span>
-              <span class="gallery-image-overlay-square"></span>
-            </span>
+            <div class="gallery-image-overlay">
+              <div class="overlay-caption-container">
+                <div class="overlay-caption-header">Sample Image Post</div>
+                <div class="overlay-caption-subheader">Photography</div>
+                <div class="overlay-caption-square"></div>
+              </div>
+            </div>
           </div>
           <div class="gallery-image-container">
             <a href="/" alt="gallery image"> 
               <img src="img/placeholder.svg" class="gallery-image" alt="gallery image"> 
             </a> 
-            <span class="gallery-image-overlay">
-              <span class="gallery-image-overlay-header">Sample Image Post</span>
-              <span class="gallery-image-overlay-subheader">Photography</span>
-              <span class="gallery-image-overlay-square"></span>
-            </span>
+            <div class="gallery-image-overlay">
+              <div class="overlay-caption-container">
+                <div class="overlay-caption-header">Sample Image Post</div>
+                <div class="overlay-caption-subheader">Photography</div>
+                <div class="overlay-caption-square"></div>
+              </div>
+            </div>
           </div>
     </div>
 
