--- a/index.html
+++ b/index.html
@@ -6,295 +6,12 @@
     <title>Metrolics</title>
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/header.css" />
-    <link rel="stylesheet" href="css/footer.css">
+    <link rel="stylesheet" href="css/footer.css" />
     <meta name="description" content="" />
-
-    <meta property="og:title" content="" />
-    <meta property="og:type" content="" />
-    <meta property="og:url" content="" />
-    <meta property="og:image" content="" />
-    <meta property="og:image:alt" content="" />
-
-
-    <link rel="icon" href="/favicon.ico" sizes="any" />
-    <link rel="icon" href="/icon.svg" type="image/svg+xml" />
-    <link rel="apple-touch-icon" href="icon.png" />
-=======
-  <link rel="manifest" href="site.webmanifest">
-  <meta name="theme-color" content="#fafafa">
-
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Baskervville:ital@0;1&family=Crimson+Pro:ital,wght@0,200..900;1,200..900&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
-  
-  <script src="js/app.js"></script>
- 
-
-
-    <link rel="manifest" href="site.webmanifest" />
-    <meta name="theme-color" content="#fafafa" />
-    <script src="js/app.js"></script>
-
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap"
-      rel="stylesheet"
-    />
   </head>
-  <body class="page page-home">
-    <header class="home-nav">
-      <nav>
-        <a href="/" class="nav-logo">
-          <img src="./Logo.svg" alt="metrolics logo" />
-        </a>
-        <ul class="nav-tabs">
-          <li class="nav-home">
-            <a href="/" class="nav-buttons">
-              <p>
-                Home <span class="arrow">></span>
-              </p>
-            </a>
-          </li>
-          <li class="nav-portfolio">
-            <a href="/" class="nav-buttons">
-              <p>
-                Portfolio <span class="arrow">></span>
-              </p>     
-            </a>
-          </li>
-          <li class="nav-blog">
-            <a href="/" class="nav-buttons">
-              <p>
-                Blog <span class="arrow">></span>
-              </p>
-            </a>
-          </li>
-          <li class="nav-quo">
-            <a href="/" class="nav-buttons">
-              <p>
-                Quo Vadis? <span class="arrow">></span>
-              </p>
-            </a>
-          </li>
-          <li class="nav-chat">
-            <a href="/" class="nav-buttons">
-              <p>
-                Let's Chat <span class="arrow">></span> 
-              </p>
-            </a>
-          </li>
-        </ul>
-      </nav>
-
-      <div class="banner-row">
-        <div class="banner">
-          <img src="./bg-image.jpg" alt="banner" />
-        </div>
-      </div>
-
-      <div class="header-container">
-        <h1 class="page-home-intro">
-          Hey folks! We are the <span class="blue">Metrolics</span> team.
-        </h1>
-        <h1 class="page-home-intro">
-          It sports a responsive layout with a mobile layout.
-        </h1>
-        <h2 class="websolutions-title">Things That We Do</h2>
-        <p class="websolutions-caption">Ask us what we can do for you</p>
-      </div>
-
-      <div class="websolutions">
-        <div class="websolutions_container">
-          <div>
-            <img src="./1.png" class="websolutions-image" />
-          </div>
-
-          <div class="web-text">
-            <h3 class="websolutions-image-title">Web Solutions</h3>
-            <p class="websolutions-image-paragraph">
-              We are a fairly small, flexible design studio that designs for
-              print and web. We work flexibly with clients to fulfil their
-              design needs. We are confident you will be pleased with the
-              results.
-            </p>
-          </div>
-        </div>
-        <div class="websolutions_container">
-          <img src="./2.png" class="websolutions-image" />
-          <div class="web-text">
-            <h3 class="websolutions-image-title">Web Solutions</h3>
-            <p class="websolutions-image-paragraph">
-              We are a fairly small, flexible design studio that designs for
-              print and web. We work flexibly with clients to fulfil their
-              design needs. We are confident you will be pleased with the
-              results.
-            </p>
-          </div>
-        </div>
-        <div class="websolutions_container">
-          <img src="./3.png" class="websolutions-image" />
-          <div class="web-text">
-            <h3 class="websolutions-image-title">Web Solutions</h3>
-            <p class="websolutions-image-paragraph">
-              We are a fairly small, flexible design studio that designs for
-              print and web. We work flexibly with clients to fulfil their
-              design needs. We are confident you will be pleased with the
-              results.
-            </p>
-          </div>
-        </div>
-        <div class="websolutions_container">
-          <img src="./4.png" class="websolutions-image" />
-          <div class="web-text">
-            <h3 class="websolutions-image-title">Web Solutions</h3>
-            <p class="websolutions-image-paragraph">
-              We are a fairly small, flexible design studio that designs for
-              print and web. We work flexibly with clients to fulfil their
-              design needs. We are confident you will be pleased with the
-              results.
-            </p>
-          </div>
-        </div>
-      </div>
-    </header>
-
-    <!-- aaaaaa -->
-    <div class="blog">
-
-      <h2 class="blog-title">What's Up Lately?</h2>
-      <p class="blog-caption">Read up on our latest work</p>
-      <div class="blog-entry">
-        <article class="blog-item">
-          <img src="/" class="blog-image" al="blog post image" />
-          <div class="blog-date">
-            <div class="blog-date-day"></div>
-            <div class="blog-date-month"></div>
-          </div>
-          <div class="blog-caption"></div>
-=======
-        <h2 class="blog-title">What's Up Lately?</h2>
-        <p class="blog-caption">Read up on our latest works</p>
-        <div class="blog-entry">
-            <article class="blog-item"> 
-                <img src="img/sample-image.png" class="blog-image" alt="blog post image">
-                <div class="blog-date">
-                    <div class="blog-date-day"></div>
-                    <div class="blog-date-month"></div>
-                </div>
-                <div class="blog-caption"></div>
-            </article>
-            <article class="blog-item"> 
-              <img src="img/sample-image.png" class="blog-image" alt="blog post image">
-              <div class="blog-date">
-                  <div class="blog-date-day"></div>
-                  <div class="blog-date-month"></div>
-              </div>
-              <div class="blog-caption"></div>
-          </article>
-          <article class="blog-item"> 
-            <img src="img/sample-image.png" class="blog-image" alt="blog post image">
-            <div class="blog-date">
-                <div class="blog-date-day"></div>
-                <div class="blog-date-month"></div>
-            </div>
-            <div class="blog-caption"></div>
-
-        </article>
-        <article class="blog-item">
-          <img src="/" class="blog-image" al="blog post image" />
-          <div class="blog-date">
-            <div class="blog-date-day"></div>
-            <div class="blog-date-month"></div>
-          </div>
-          <div class="blog-caption"></div>
-        </article>
-        <article class="blog-item">
-          <img src="/" class="blog-image" al="blog post image" />
-          <div class="blog-date">
-            <div class="blog-date-day"></div>
-            <div class="blog-date-month"></div>
-          </div>
-          <div class="blog-caption"></div>
-        </article>
-      </div>
-    </div>
-
-    <div class="gallery">
-
-      <h2 class="gallery-title">Our Best Work. Period</h2>
-      <p class="gallery-caption">Client happy? We are happy.</p>
-      <div class="gallery-grid">
-        <a href="/" alt="gallery image">
-          <img src="/" class="gallery-image" alt="gallery image" />
-          <!--add hover in css-->
-        </a>
-        <a href="/" alt="gallery image">
-          <img src="/" class="gallery-image" alt="gallery image" />
-        </a>
-        <a href="/" alt="gallery image">
-          <img src="/" class="gallery-image" alt="gallery image" />
-        </a>
-        <a href="/" alt="gallery image">
-          <img src="/" class="gallery-image" alt="gallery image" />
-        </a>
-        <a href="/" alt="gallery image">
-          <img src="/" class="gallery-image" alt="gallery image" />
-        </a>
-        <a href="/" alt="gallery image">
-          <img src="/" class="gallery-image" alt="gallery image" />
-        </a>
-      </div>
-    </div>
-
-    <div class="clients">
-      <h2 class="clients-title">Satisfaction Guranteed</h2>
-      <p class="clients-caption">
-        Past clients stoked with our work. We are not happy until YOU are happy
-      </p>
-      <div class="clients-logos">
-        <img src="/" class="client-logo-image" alt="client logo image" />
-        <img src="/" class="client-logo-image" alt="client logo image" />
-        <img src="/" class="client-logo-image" alt="client logo image" />
-        <img src="/" class="client-logo-image" alt="client logo image" />
-        <img src="/" class="client-logo-image" alt="client logo image" />
-      </div>
-
-        <h2 class="gallery-title">Our Best Work. Period</h2>
-        <p class="gallery-caption">Client happy? We are happy.</p>
-        <div class="gallery-grid">
-          <a href="/" alt="gallery image"> 
-            <img src="img/sample-image.png" class="gallery-image" alt="gallery image"> <!--add hover in css-->
-          </a> 
-          <a href="/" alt="gallery image"> 
-            <img src="img/sample-image.png" class="gallery-image" alt="gallery image"> 
-          </a> 
-          <a href="/" alt="gallery image"> 
-            <img src="img/sample-image.png" class="gallery-image" alt="gallery image"> 
-          </a> 
-          <a href="/" alt="gallery image"> 
-            <img src="img/sample-image.png" class="gallery-image" alt="gallery image"> 
-          </a> 
-          <a href="/" alt="gallery image"> 
-            <img src="img/sample-image.png" class="gallery-image" alt="gallery image"> 
-          </a> 
-          <a href="/" alt="gallery image"> 
-            <img src="img/sample-image.png" class="gallery-image" alt="gallery image"> 
-          </a> 
-    </div>
-
-    <div class="clients">
-        <h2 class="clients-title">Satisfaction Guranteed</h2>
-        <p class="clients-caption">Past clients stoked with our work. We are not happy until YOU are happy</p>
-        <div class="clients-logos">
-            <img src="img/logo1.png" class="client-logo-image" alt="client logo image">
-            <img src="img/logo4.png" class="client-logo-image" alt="client logo image">
-            <img src="img/logo3.png" class="client-logo-image" alt="client logo image">
-            <img src="img/logo2.png" class="client-logo-image" alt="client logo image">
-            <img src="img/logo5.png" class="client-logo-image" alt="client logo image">
-        </div>
-
-    </div>
+  <body>
+    
+    <!-- Existing Content -->
 
     <footer class="site-footer">
       <div class="footer-container">
@@ -351,3 +68,5 @@
     
       </div>
     </footer>
+  </body>
+</html>
